Pruebas de usar tags como notas

--- a/Sterna/.obsidian/app.json
+++ b/Sterna/.obsidian/app.json
@@ -5,5 +5,7 @@
     "en-GB",
     "es"
   ],
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "newLinkFormat": "relative",
+  "showUnsupportedFiles": true
 }
