--- a/Sterna/.obsidian/appearance.json
+++ b/Sterna/.obsidian/appearance.json
@@ -2,5 +2,6 @@
   "theme": "system",
   "cssTheme": "",
   "baseFontSize": 15,
-  "accentColor": ""
+  "accentColor": "",
+  "nativeMenus": false
 }
